# basin-demos

./: .gitignore  README.md
grass/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  processed.parquet  pyproject.toml
grass/src/: basin.py  classify.py  fetch.py  initialize.py  query.py  util.py
